--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.2.4",
     "gh-pages": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
